Attempt to fix thumbnail alignments on Kidoju support localized home page did not work - rolling back changes https://github.com/Memba/Memba-Blog/issues/105

--- a/styles/app.page.common.less
+++ b/styles/app.page.common.less
@@ -442,13 +442,6 @@ form {
 }
 
 //---------------------------------------------
-// Bootstrap
-.thumbnail {
-    // Fixes https://github.com/Memba/Memba-Blog/issues/105
-    box-sizing: border-box;
-}
-
-//---------------------------------------------
 // Tooltips
 .k-tooltip {
     max-width: 400px;
